--- a/js10a_txt.html
+++ b/js10a_txt.html
@@ -2,7 +2,7 @@
 <html>
 <head>
    <!--
-    Oak Top House Directions
+    Oak Top House
     Author: Nicholas Catalan
     Date: 1/1/2023  
  
@@ -48,8 +48,7 @@
          fit 12 guests and smaller round tables can fit 8 guests. Tables 
          of other sizes and dimensions are available upon request.
          Contact the <a href="#">Special Events coordinator</a> for special needs items such as
-         stages, bars, computer workstations, AV equipment, DJ stations, and kiosks. If you need 
-         a larger venue for your event, please consider the <a href="#">Orchid Room</a>.
+         stages, bars, computer workstations, AV equipment, DJ stations, and kiosks.
       </p>
    </article>
    
